buildscript {
	ext {
		springBootVersion = '4.0.2'
		springDependencyManagementVersion = '1.1.7'
	}
}

plugins {
	id 'java'
	id 'jacoco'
	id 'org.springframework.boot' version "${springBootVersion}"
	id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
}

group = 'com.ordertogether'
version = '2026.06.27.003'
description = 'disabled sql logs'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	/** Spring Web */
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-restclient-test'

	/** Spring Data JPA */
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'

	/** Spring Kafka */
	implementation 'org.springframework.boot:spring-boot-starter-kafka'
	testImplementation 'org.springframework.boot:spring-boot-starter-kafka-test'

	/** JSR 310 */
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	/** Spring Mail */
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	/** MySQL */
	runtimeOnly 'com.mysql:mysql-connector-j'

	/** Thymeleaf */
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

	/** Lombok */
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.projectlombok:lombok'

	/** Flyway */
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'
	implementation 'org.flywaydb:flyway-mysql'

	/** JUnit Platform */
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	/** Spring Actuator */
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	/** Prometheus */
	implementation 'io.micrometer:micrometer-registry-prometheus'

	implementation 'io.prometheus:prometheus-metrics-exposition-formats'
}

test {
	useJUnitPlatform{
		excludeTags 'slow-test'
	}
	finalizedBy jacocoTestReport
}

jar {
	enabled = false
}

jacocoTestReport {
	dependsOn test
	reports {
		html.required.set(true)
		html.outputLocation.set(layout.buildDirectory.dir("jacoco"))
	}

	afterEvaluate {
		classDirectories.setFrom(
				files(classDirectories.files.collect {
					fileTree(dir: it, excludes: [
							'**/common/**',
							'**/config/*',
							'**/*Exception*',
							'**/error/**',
							'**/mock/**',
							'**/dto/**',
							'**/request/**',
							'**/response/**'
					])
				})
		)
	}
}
